<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_calibration_service</name>
  <version>0.0.0</version>
  <description>Fisheye camera calibration service package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool support -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message interface dependencies -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <!-- Generate interfaces in both Python and C++ -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
